test_files/invalid/023-self-as-variable-decl.man
def main()
    Int self
end
